# STZ_lab4

./: CMakeLists.txt  FourierTransform.cpp  FourierTransform.h  README.md  custom_DFT.cpp  custom_DFT.h  custom_FFT.cpp  custom_FFT.h  main.cpp
python/: DFT.py  DFT_.py  DFT_lobovoy.py  FFT_.py  FFT_babochka.py  compare_numpy.py  to_numpy.py  utils.py
